fix many issues:
W-14610685: Ignore xml-apis dependency from module
W-14610690: Include test dependencies overriding a transitive compile dependency
W-14610698: Avoid exporting services implementations in not exported packages